--- a/display-exercise.html
+++ b/display-exercise.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CSS Layout Exercises | display property</title>
-  <meta charset="utf-8" name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
+  <head>
+    <title>CSS Layout Exercises | display property</title>
+    <meta
+      charset="utf-8"
+      name="description"
+      content="Layout exercise on `display` property for Thinkful's front end web development course"
+    />
 
-  <!-- fonts  -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- fonts  -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
 
-  <!-- reset -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <!-- reset -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css"
+    />
 
-  <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
-  <!-- your styles will go in display-page.css -->
-  <link rel="stylesheet" type="text/css" href="styles/display-page.css">
-</head>
-<body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
-</body>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <!-- your styles will go in display-page.css -->
+    <link rel="stylesheet" type="text/css" href="styles/display-page.css" />
+  </head>
+  <body>
+    <main>
+      <div class="main-div">
+        <div class="inner-div-one"></div>
+        <div class="inner-div-two"></div>
+        <div class="inner-div-three"></div>
+        <div class="inner-div-four"></div>
+        <div class="inner-div-five"></div>
+      </div>
+    </main>
+  </body>
 </html>
